# kis_linux1

hw1/: backup.sh
hw2/tupofs/: .gitignore  CMakeLists.txt  README.md  cli.c  fuse.c  run_fuse.sh  test.c  tfs_errs.c  tfs_errs.h  tupofs.c  tupofs.h
hw2/tupofs/CMake/: FindFUSE.cmake
